# vision

src/rm_auto_aim/armor_detector/include/armor_detector/: detector_node.hpp
src/rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp
src/rm_auto_aim/armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker_node.hpp
src/rm_auto_aim/armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_node.cpp
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: vision_bringup.launch.py
src/ros2_hik_camera/src/: hik_camera_node.cpp
src/sp_decision/: CMakeLists.txt  package.xml
src/sp_decision/config/: decision.yaml
src/sp_decision/include/sp_decision/: decision_node.hpp
src/sp_decision/src/: decision_node.cpp  trajectory.cpp
src/sp_gimbal/: CMakeLists.txt  package.xml
src/sp_gimbal/config/: gimbal.yaml
src/sp_gimbal/include/sp_gimbal/: gimbal_node.hpp  packet.hpp
src/sp_gimbal/src/: gimbal_node.cpp
src/sp_interfaces/: CMakeLists.txt  package.xml
src/sp_interfaces/msg/: GimbalCommand.msg  GimbalState.msg
